# subir

subir_backend/: .gitignore  Cargo.toml
subir_backend/src/: app.rs  main.rs  redis_service.rs
subir_backend/src/routes/files/: get.rs  put.rs
subir_frontend/: package-lock.json  package.json
subir_frontend/pages/: _app.js  index.js
