[package]
name = "subir_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tide = "0.16.0"
async-std = { version = "1.8.0", features = ["attributes"] }
serde = { version = "1.0", features = ["derive"] }
tempdir = "0.3.7"
cloud-storage = "0.11.0"
json = { package = "serde_json", version = "1.0.64" }
tokio = {version = "1.5.1", features=["full"]}
futures = "0.3.21"
async-trait = "0.1.52"
flume = "0.10.12"
multer = "2.0.2"
dotenv = "0.15.0"

[dependencies.redis]
git = "https://github.com/mitsuhiko/redis-rs.git"